# Chess

./: .gitignore  CMakeLists.txt  Diagramme sans nom.drawio  Learning.txt  README.md  Synoptic.drawio  coupNumero1.txt  main.cpp  todo.md
.github/workflows/: cmake-single-platform.yml
chess-game/: package-lock.json
chess-game/src/app/: global.css
chess-game/src/app/components/: Board.css
model/: Bishop.h  King.h  Knight.h  Pawn.h  Piece.h  Queen.h  Rook.h  model.h
presentation/: PrintingBoard.h  package.json
presentation/src/app/: global.css  layout.tsx  page.tsx
presentation/src/app/components/: Board.css  Board.tsx
services/: CMakeLists.txt  ChessAlgorithm.h  chessAlgorithm.cpp
test/: CMakeLists.txt  Chess.cfg  Chess2.cfg  Chess3.cfg  Chess4.cfg  ChessInitialPosition.cfg  coupNumero1.txt  test_algo.cpp  test_back.cpp
